--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,3 +8,13 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+/* in tailwind.config or global.css */
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(100, 116, 139, 0.5);
+  border-radius: 9999px;
+}
+
